--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </p>
         </nav>
 
-        <main>
+        <main class="container">
             <div class="form_heading">
                 <h2>
                     Sign up to Dribbble
@@ -44,7 +44,7 @@
             </div>
 
             <div class="signup_btn">
-                <a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">
+                <a href="https://www.google.com/intl/en-GB/gmail/about/">
                     <i class ="fab fa-google fa-1x"> Sign Up with Google </i> </a>
                 <a href="https://twitter.com/login?lang=en">
                     <i class = "fab fa-twitter fa-1x"></i></a>
