--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             </section>
 
             <section class="form">
-                <nav class="signup_form">
+                <nav>
                     <p class="form-link">
-          Already a member? 
-          <a href="https://eisenvault.net/share/page/">Sign In</a>
-        </p>
-        </nav>
+                        Already a member? 
+                        <a href="https://eisenvault.net/share/page/">Sign In</a>
+                    </p>
+                </nav>
 
         <main class="container">
             <div class="form_heading">
