--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav>
                     <p class="form-link">
                         Already a member? 
-                        <a href="https://eisenvault.net/share/page/">Sign In</a>
+                    <a href="https://eisenvault.net/share/page/"> Sign In</a>
                     </p>
                 </nav>
 
@@ -45,12 +45,66 @@
 
             <div class="signup_btn">
                 <a href="https://www.google.com/intl/en-GB/gmail/about/">
-                    <i class ="fab fa-google fa-1x"> Sign Up with Google </i> </a>
+                    <i class ="fab fa-google fa-1x">
+                    <span class="btn_text"> Sign up with Google</span> </i>
+                </a>
+
                 <a href="https://twitter.com/login?lang=en">
                     <i class = "fab fa-twitter fa-1x"></i></a>
+
                 <a href="https://www.facebook.com">
                     <i class = "fab fa-facebook-square fa-1x"></i></a>
             </div>
+
+            <hr class='divider' />
+
+            <div class="details_form">
+                <div id="fullname">
+                <p><label>Full Name <br />
+                <input type="text" name="fullname" 
+                    maxlength="20"/>
+                </label></p>
+                </div>
+
+                <div id="username">
+                <p><label>Username <br />
+                <input type="text" name="usrname" 
+                    maxlength="30"/>
+                </label></p>
+                </div>
+
+              <div id="email_id">
+                <p><label>Email Address <br />
+                    <input type="email" name="email" 
+                    maxlength="100"/>
+                </label></p>
+              </div>
+
+              <div id="pswd">
+                <p><label>Password <br />
+                    <input type="password" name="password" 
+                    maxlength="30" placeholder="6+ characters"/>
+                </label></p>
+                </div>
+
+            <div id="terms_condtns">
+                <p>
+                    <input type="checkbox" 
+                    name="terms and conditions"/> 
+                    Creating an account means you’re okay with our 
+                    <a href ="/">Terms of Service </a>, 
+                    <a href ="/">Privacy Policy</a>, and 
+                    our default 
+                    <a href ="/">Notification Settings</a>.
+                </p>
+            </div>
+
+                <p>
+                    <input type="submit" value="Create account" 
+                    class="button" />
+                </p>
+            </div>
+
         </main>
     </section>
     </div>
