--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div id="pswd">
                 <p><label>Password <br />
                     <input type="password" name="password" 
-                    maxlength="30" placeholder="6+ characters"/>
+                    maxlength="30" placeholder="     6+ characters"/>
                 </label></p>
                 </div>
 
@@ -91,11 +91,12 @@
                 <p>
                     <input type="checkbox" 
                     name="terms and conditions"/> 
-                    Creating an account means you’re okay with our 
+                    <label>Creating an account means you’re okay with our 
                     <a href ="/">Terms of Service </a>, 
                     <a href ="/">Privacy Policy</a>, and 
                     our default 
                     <a href ="/">Notification Settings</a>.
+                    </label>
                 </p>
             </div>
 
