--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body> 
-            <div class="bg1">
+        <div class="bg1">
             <section class="sidebar1">
                 <div class="text">
                     <header>
@@ -36,79 +36,77 @@
                     </p>
                 </nav>
 
-        <main class="container">
-            <div class="form_heading">
-                <h2>
-                    Sign up to Dribbble
-                </h2>
-            </div>
-
-            <div class="signup_btn">
-                <a href="https://www.google.com/intl/en-GB/gmail/about/">
-                    <i class ="fab fa-google fa-1x">
-                    <span class="btn_text"> Sign up with Google</span> </i>
-                </a>
-
-                <a href="https://twitter.com/login?lang=en">
-                    <i class = "fab fa-twitter fa-1x"></i></a>
-
-                <a href="https://www.facebook.com">
-                    <i class = "fab fa-facebook-square fa-1x"></i></a>
-            </div>
-
-            <hr class='divider' />
-
-            <div class="details_form">
-                <div id="fullname">
-                <p><label>Full Name <br />
-                <input type="text" name="fullname" 
-                    maxlength="20"/>
-                </label></p>
+            <main class="container">
+                <div class="form_heading">
+                    <h2>
+                        Sign up to Dribbble
+                    </h2>
                 </div>
 
-                <div id="username">
-                <p><label>Username <br />
-                <input type="text" name="usrname" 
-                    maxlength="30"/>
-                </label></p>
+                <div class="signup_btn">
+                    <a href="https://www.google.com/intl/en-GB/gmail/about/">
+                        <i class ="fab fa-google fa-1x">
+                        <span class="btn_text"> Sign up with Google</span> </i>
+                    </a>
+
+                    <a href="https://twitter.com/login?lang=en">
+                        <i class = "fab fa-twitter fa-1x"></i></a>
+
+                    <a href="https://www.facebook.com">
+                        <i class = "fab fa-facebook-square fa-1x"></i></a>
                 </div>
 
-              <div id="email_id">
-                <p><label>Email Address <br />
-                    <input type="email" name="email" 
-                    maxlength="100"/>
-                </label></p>
-              </div>
+                <hr class='divider' />
 
-              <div id="pswd">
-                <p><label>Password <br />
-                    <input type="password" name="password" 
-                    maxlength="30" placeholder="     6+ characters"/>
-                </label></p>
+                <div class="details_form">
+                    <div id="fullname">
+                    <p><label>Full Name <br />
+                    <input type="text" name="fullname" 
+                        maxlength="20"/>
+                    </label></p>
+                    </div>
+
+                    <div id="username">
+                        <p><label>Username <br />
+                        <input type="text" name="usrname" 
+                            maxlength="30"/>
+                        </label></p>
+                    </div>
+
+                    <div id="email_id">
+                        <p><label>Email Address <br />
+                            <input type="email" name="email" 
+                            maxlength="100"/>
+                        </label></p>
+                    </div>
+
+                    <div id="pswd">
+                        <p><label>Password <br />
+                            <input type="password" name="password" 
+                            maxlength="30" placeholder="     6+ characters"/>
+                        </label></p>
+                    </div>
+
+                    <div id="terms_condtns">
+                        <input type="checkbox" 
+                        name="terms and conditions"/>
+                        <label>Creating an account means you’re okay with our 
+                        <a href ="/">Terms of Service </a>, 
+                        <a href ="/">Privacy Policy</a>, and 
+                        our default 
+                        <a href ="/">Notification Settings</a>.
+                        </label>
+                    </div>
+
+                    <div class="sign_up_btn">
+                        <input type="submit" class="button" value="Create account"/>
+                    </div>
+                
                 </div>
 
-            <div id="terms_condtns">
-                <p>
-                    <input type="checkbox" 
-                    name="terms and conditions"/> 
-                    <label>Creating an account means you’re okay with our 
-                    <a href ="/">Terms of Service </a>, 
-                    <a href ="/">Privacy Policy</a>, and 
-                    our default 
-                    <a href ="/">Notification Settings</a>.
-                    </label>
-                </p>
-            </div>
-
-                <p>
-                    <input type="submit" value="Create account" 
-                    class="button" />
-                </p>
-            </div>
-
-        </main>
-    </section>
-    </div>
+            </main>
+        </section>
+        </div>
 
 </body>
 </html>
