--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="image"></div>
                         <p class="image-source">
                             Image was taken from 
-                            <a href="https://www.pexels.com/search/yellow%20flowers/">Pexels Website</a>
+                            <a href="/">Pexels Website</a>
                         </p>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                 <nav>
                     <p class="form-link">
                         Already a member? 
-                    <a href="https://eisenvault.net/share/page/"> Sign In</a>
+                    <a href="/"> Sign In</a>
                     </p>
                 </nav>
 
@@ -44,15 +44,15 @@
                 </div>
 
                 <div class="signup_btn">
-                    <a href="https://www.google.com/intl/en-GB/gmail/about/">
+                    <a href="/">
                         <i class ="fab fa-google fa-1x">
                         <span class="btn_text"> Sign up with Google</span> </i>
                     </a>
 
-                    <a href="https://twitter.com/login?lang=en">
+                    <a href="/">
                         <i class = "fab fa-twitter fa-1x"></i></a>
 
-                    <a href="https://www.facebook.com">
+                    <a href="/">
                         <i class = "fab fa-facebook-square fa-1x"></i></a>
                 </div>
 
@@ -86,23 +86,20 @@
                             maxlength="30" placeholder="     6+ characters"/>
                         </label></p>
                     </div>
+                </div>
 
                     <div id="terms_condtns">
-                        <input type="checkbox" 
-                        name="terms and conditions"/>
-                        <label>Creating an account means you’re okay with our 
-                        <a href ="/">Terms of Service </a>, 
-                        <a href ="/">Privacy Policy</a>, and 
-                        our default 
-                        <a href ="/">Notification Settings</a>.
+                        <input type="checkbox" name="terms and conditions"/> 
+                        <label>
+                            Creating an account means you’re okay with our 
+                            <a href ="/">Terms of Service </a>, 
+                            <a href ="/">Privacy Policy</a>, and our default 
+                            <a href ="/">Notification Settings.</a>
                         </label>
                     </div>
 
-                    <div class="sign_up_btn">
                         <input type="submit" class="button" value="Create account"/>
-                    </div>
-                
-                </div>
+               
 
             </main>
         </section>
