--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="image"></div>
                         <p class="image-source">
                             Image was taken from 
-                            <a href="/">Pexels Website</a>
+                            <a href="/">&nbsp;Pexels Website</a>
                         </p>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                 <nav>
                     <p class="form-link">
                         Already a member? 
-                    <a href="/"> Sign In</a>
+                    <a href="/">&nbsp;Sign In</a>
                     </p>
                 </nav>
 
