--- a/index.html
+++ b/index.html
@@ -93,16 +93,15 @@
                         <label>
                             Creating an account means you’re okay with our 
                             <a href ="/">Terms of Service </a>, 
-                            <a href ="/">Privacy Policy</a>, and our default 
+                            <a href ="/">Privacy Policy</a> and our default 
                             <a href ="/">Notification Settings.</a>
                         </label>
                     </div>
 
                         <input type="submit" class="button" value="Create account"/>
                
-
-            </main>
-        </section>
+                </main>
+            </section>
         </div>
 
 </body>
